--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fork-ts-checker-webpack-plugin": "^6.0.8",
     "html-webpack-plugin": "^4.5.0",
     "prettier": "^2.2.1",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "react-dev-utils": "^11.0.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
